--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,6 +7,11 @@ interface Props {}
 
 <html lang="en">
   <head>
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
+      as="style"
+    />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>AI Social Creator</title>
