--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import "../styles/global.css";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 interface Props {}
@@ -9,7 +10,6 @@ interface Props {}
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>AI Social Creator</title>
-    <link rel="stylesheet" href="/src/styles/global.css" />
     <slot name="head" />
   </head>
   <body class="flex flex-col min-h-screen bg-gray-50 text-gray-900">
