--- a/src/pages/configuration.astro
+++ b/src/pages/configuration.astro
@@ -1,4 +1,5 @@
 ---
+import "../styles/global.css";
 import Layout from "../layouts/Layout.astro";
 import ConfiguratorLoader from "../components/ConfiguratorLoader";
 ---
@@ -10,11 +11,15 @@ import ConfiguratorLoader from "../components/ConfiguratorLoader";
       import("@area73/ai-web-key-configurator");
     </script>
   </Fragment>
-  <h1 class="text-4xl font-bold mb-4 font-sans">Configuration</h1>
+  <h1
+    class="text-4xl font-bold mb-4 font-sans bg-gradient-to-r from-blue-500 via-fuchsia-500 to-pink-500 bg-clip-text text-transparent"
+  >
+    Configuración
+  </h1>
   <p class="text-lg text-gray-600 font-sans mb-6">
     Configure your API keys below. These are stored locally in your browser.
   </p>
-  <div class="max-w-xl mx-auto">
+  <div class="mx-auto">
     <key-configurator id="ai-social-creator-config">
       <key-pair>
         <key-name>LINKEDIN_API_KEY</key-name>
