--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import "../styles/global.css";
 import Layout from "../layouts/Layout.astro";
 ---
 
@@ -10,5 +11,9 @@ import Layout from "../layouts/Layout.astro";
     <meta name="generator" content={Astro.generator} />
     <title>Astro</title>
   </Fragment>
-  <h1>Astro</h1>
+  <h1
+    class="text-4xl font-bold mb-4 font-sans bg-gradient-to-r from-blue-500 via-fuchsia-500 to-pink-500 bg-clip-text text-transparent"
+  >
+    Astro
+  </h1>
 </Layout>
