--- a/src/pages/configuration.astro
+++ b/src/pages/configuration.astro
@@ -22,6 +22,10 @@ import ConfiguratorLoader from "../components/ConfiguratorLoader";
   <div class="mx-auto">
     <key-configurator id="ai-social-creator-config">
       <key-pair>
+        <key-name>OPENAI_API_KEY</key-name>
+        <key-value></key-value>
+      </key-pair>
+      <key-pair>
         <key-name>LINKEDIN_API_KEY</key-name>
         <key-value></key-value>
       </key-pair>
