--- a/src/pages/configuration.astro
+++ b/src/pages/configuration.astro
@@ -26,7 +26,15 @@ import ConfiguratorLoader from "../components/ConfiguratorLoader";
         <key-value></key-value>
       </key-pair>
       <key-pair>
-        <key-name>LINKEDIN_API_KEY</key-name>
+        <key-name>LINKEDIN_TOKEN</key-name>
+        <key-value></key-value>
+      </key-pair>
+      <key-pair>
+        <key-name>LINKEDIN_CLIENT_ID</key-name>
+        <key-value></key-value>
+      </key-pair>
+      <key-pair>
+        <key-name>LINKEDIN_CLIENT_SECRET</key-name>
         <key-value></key-value>
       </key-pair>
       <key-pair>
